@@ -1,3 +1,9 @@
+  - clean up old, dead code in Amazon target (the old inventory db which
+    is now an official part of the core, and in the Target base class)
+
+  - retry PUTs to Amazon on failure, once, in case it was a transient error,
+    as seems to happen occasionally
+
   - halve number of stats when walking backup root
 
   - cleanups, strictness
